syntax = "proto3";

package api.coauth.v1;

import "google/api/annotations.proto";

option go_package = "coauth/api/v1;v1";
option java_multiple_files = true;
option java_package = "api.coauth.v1";

service coauth {
	rpc Authorize (AuthorizeRequest) returns (AuthorizeReply){
    option (google.api.http) = {
      get: "/v1/auth/authorize"
    };
  }
	rpc Token (TokenRequest) returns (TokenReply){
    option (google.api.http) = {
      post: "/v1/auth/token"
      body: "*"
    };
  }
  rpc AddApp (AddAppRequest) returns (AddAppReply){
    option (google.api.http) = {
      post: "/v1/auth/apps"
      body: "*"
    };
  }
}

message AddAppRequest {
  string client_name = 1;
  string home_page = 2;
  string client_summary = 3;
  string callback_url = 4;
  repeated string scopes = 5;
  string user_id = 6;
}

message AddAppReply {
  int64 code = 1;
  string message = 2;
  string client_id = 3;
}

message AuthorizeRequest {
	string client_id = 1;
  string redirect_uri = 2;
  string response_type = 3;
	string state = 4;
}

message AuthorizeReply {
	string code = 1;
  string state = 2;
  string redirect_uri = 3;
}

message TokenRequest {
	string client_id = 1;
	string client_secret = 2;
  string grant_type = 3;
  string code = 4;
  string redirect_uri = 5;
  string data_type = 6;
  string callback = 7;
  string refresh_token = 8;
}

message TokenReply {
  string access_token = 1;
  string token_type = 2;
  int64 expires_in = 3;
  string refresh_token = 4;
}
